--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+*
+!*/
+!*.*
+*.log
+*.json
+*.DS_Store
 /.DS_Store
 *.pyc
 *.cpython
@@ -12,3 +18,4 @@ simple_ea_xor/__pycache__/config.cpython-310.pyc
 *.txt
 *.db
 *.sqlite
+gymnasium_acrobot/winner-feedforward
