--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ robot_bodybrain_ea_neatpython/slurm-4677362.out
 robot_bodybrain_ea_neatpython/slurm-4677376.out
 robot_bodybrain_ea_neatpython/slurm-4677383.out
 robot_bodybrain_ea_neatpython/slurm-4677738.out
+*.out
